--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
   },
   "dependencies": {
     "@emotion/styled": "^11.11.0",
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.15.9",
     "@mui/styled-engine-sc": "6.0.0-alpha.16",
+    "@react-google-maps/api": "^2.19.2",
     "@tanstack/react-query": "^5.20.1",
     "@tanstack/react-query-devtools": "^5.20.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
-    "styled-components": "^6.1.8",
-    "styles": "link:@mui/material/styles"
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
