--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.15.9",
     "@mui/styled-engine-sc": "6.0.0-alpha.16",
-    "@react-google-maps/api": "^2.19.2",
+    "@mui/system": "^5.15.9",
+    "@react-google-maps/api": "^2.19.3",
     "@tanstack/react-query": "^5.20.1",
     "@tanstack/react-query-devtools": "^5.20.1",
     "react": "^18.2.0",
