--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.15.9",
     "@mui/styled-engine-sc": "6.0.0-alpha.16",
     "@mui/system": "^5.15.9",
+    "@mui/x-charts": "^6.19.4",
     "@react-google-maps/api": "^2.19.3",
     "@tanstack/react-query": "^5.20.1",
     "@tanstack/react-query-devtools": "^5.20.1",
